--- a/views/maquinas/index.ejs
+++ b/views/maquinas/index.ejs
@@ -14,7 +14,7 @@
                 <th> ID </th>
                 <th> Descrição </th>
                 <th> IP </th>
-                <th> Código </th>
+                <th> Código Injet </th>
                 <th> Peso </th>
                 <th> Modelo </th>
             </tr>
