--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -73,10 +73,22 @@
    </div>
 
 
-   <div id="myModal" class="modal fade" role="dialog">
+   <!-- <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
-         <!-- Modal content-->
          <div id="plotly"></div>
+      </div>
+   </div> -->
+
+   <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModal" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+         <div class="modal-body">
+            <div id="plotly"></div>
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+         </div>
+      </div>
       </div>
    </div>
 
