mudança no layout da ficha tecnica

--- a/views/fichas/indexFicha.ejs
+++ b/views/fichas/indexFicha.ejs
@@ -30,7 +30,7 @@
 <div class="d-flex justify-content-between">
    <!-- INJETORES -->
    <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
-      <table id="cilindro" class="table-bordered" style="width: 100%">
+      <table id="cilindro" class="table-bordered" style="width: 100%;">
          <thead>
             <tr>
                <th>TOL &#177; 10%</th>
@@ -46,7 +46,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="injecao" class="table-bordered" style="width: 100%;">
+      <table id="injecao" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">INJEÇÃO</th>
@@ -63,7 +63,7 @@
          <tfoot id="injecaoFoot"></tfoot>
       </table>
 
-      <table id="recalque" class="table-bordered" style="width: 100%;">
+      <table id="recalque" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">RECALQUE</th>
@@ -79,7 +79,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="dosagem" class="table-bordered" style="width: 100%;">
+      <table id="dosagem" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">DOSAGEM</th>
@@ -96,7 +96,7 @@
          <tfoot id="dosagemFoot"></tfoot>
       </table>
 
-      <table id="descompressao" class="table-bordered" style="width: 100%;">
+      <table id="descompressao" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">DESCOMPRESSÃO</th>
@@ -113,7 +113,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="fechamento" class="table-bordered" style="width: 100%;">
+      <table id="fechamento" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">FECHAMENTO</th>
@@ -132,7 +132,7 @@
          <tfoot id="fechamentoFoot"></tfoot>
       </table>
 
-      <table id="abertura" class="table-bordered" style="width: 100%;">
+      <table id="abertura" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">ABERTURA</th>
@@ -149,7 +149,7 @@
          <tfoot id="aberturaFoot"></tfoot>
       </table>
 
-      <table id="extracao" class="table-bordered" style="width: 100%;">
+      <table id="extracao" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">EXTRAÇÃO</th>
@@ -173,7 +173,7 @@
          <tfoot id="extracaoFoot"></tfoot>
       </table>
 
-      <table id="radial" class="table-bordered" style="width: 100%;">
+      <table id="radial" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
             <tr>
                <th colspan="6">RADIAL HIDRÁULICO</th>
@@ -199,7 +199,11 @@
 
    <!-- PERIFÉRICOS -->
    <div class="table-responsive table-ficha d-flex flex-column justify-content-between" style="width: 50vw;">
-      <table id="camaraQuente" class="table-bordered" style="width: 100%">
+      <table id="termopar" class="table-bordered" style="width: 100%">
+         <tbody></tbody>
+      </table>
+
+      <table id="camaraQuente" class="table-bordered" style="width: 100%;">
          <thead>
             <tr>
                <th colspan="5">CÂMARA QUENTE</th>
@@ -209,11 +213,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="termopar" class="table-bordered" style="width: 100%; margin-top: 40px">
-         <tbody></tbody>
-      </table>
-
-      <table id="valveGate" class="table-bordered" style="width: 100%; margin-top: 40px">
+      <table id="valveGate" class="table-bordered" style="width: 100%;">
          <thead>
             <tr>
                <th colspan="5">VALVE GATES</th>
@@ -224,10 +224,9 @@
             </tr>
          </thead>
          <tbody></tbody>
-         <tfoot id="valveGateFoot"></tfoot>
       </table>
 
-      <table id="refrigeracao" class="table-bordered" style="margin-top: 40px">
+      <table id="refrigeracao" class="table-bordered">
          <thead>
             <tr>
                <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
@@ -236,7 +235,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="vapor" class="table-bordered" style="margin-top: 40px">
+      <table id="vapor" class="table-bordered">
          <thead>
             <tr>
                <th colspan="7">STEAM(VAPOR)</th>
