numero da revisao sendo mostrado na listagem de fichas

--- a/views/fichas/list.ejs
+++ b/views/fichas/list.ejs
@@ -39,6 +39,7 @@
    <table id="fichaTable" class="table table-bordered"> 
       <thead>
          <tr>
+            <th> Revisão </th>
             <th> Id Ficha Técnica </th>
             <th> Id Máquina </th>
             <th> Máquina </th>
