--- a/views/acesso_vf_web/index.ejs
+++ b/views/acesso_vf_web/index.ejs
@@ -73,11 +73,23 @@
       <div id="ficha">
          <%- include ('../fichas/indexFicha.ejs') %>
       </div>
-   
-      <div id="myModal" class="modal fade" role="dialog">
-         <div class="modal-dialog">
-            <!-- Modal content-->
-            <div id="plotly"></div>
+   </div>
+
+   <!-- <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+         <div id="plotly"></div>
+      </div>
+   </div> -->
+
+   <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModal" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+            <div class="modal-body">
+               <div id="plotly"></div>
+            </div>
+            <div class="modal-footer">
+               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
          </div>
       </div>
    </div>
